https://bugs.webkit.org/show_bug.cgi?id=83826

Wrong Font code path was chosen after r114032. The TextRun constructor has an additional argument that
needs to be included if rounding hacks are mentioned.

Reviewed by Dan Bernstein.

* html/canvas/CanvasRenderingContext2D.cpp:
(WebCore::CanvasRenderingContext2D::drawTextInternal):
* rendering/RenderListBox.cpp:
(WebCore::RenderListBox::paintItemForeground):
* rendering/break_lines.cpp:
(WebCore::nextBreakablePosition):


Canonical link: https://commits.webkit.org/101481@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@114205 268f45cc-cd09-0410-ab3c-d52691b4dbfc